nginx-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-prod
  namespace: pyaha-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-prod
  template:
    metadata:
      labels:
        app: nginx-prod
    spec:
      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-volume-prod
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-volume
              mountPath: /usr/share/nginx/html/static
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true
